Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_ap_uint_16bit/solution1/sim/wrapc/err.log
In file included from C:/Xilinx/Vitis_HLS/2023.2/include/floating_point_v7_1_bitacc_cmodel.h:150:0,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/hls_fpo.h:140,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/etc/hls_half_fpo.h:19,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/hls_half.h:26,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/etc/ap_private.h:52,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/etc/ap_common.h:666,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/ap_fixed.h:9,
                 from apatb_half_add_sub.cpp:12:
C:/Xilinx/Vitis_HLS/2023.2/include/gmp.h:58:0: warning: "__GMP_LIBGMP_DLL" redefined
 #define __GMP_LIBGMP_DLL  0
 
In file included from C:/Xilinx/Vitis_HLS/2023.2/include/hls_fpo.h:140:0,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/etc/hls_half_fpo.h:19,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/hls_half.h:26,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/etc/ap_private.h:52,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/etc/ap_common.h:666,
                 from C:/Xilinx/Vitis_HLS/2023.2/include/ap_fixed.h:9,
                 from apatb_half_add_sub.cpp:12:
C:/Xilinx/Vitis_HLS/2023.2/include/floating_point_v7_1_bitacc_cmodel.h:142:0: note: this is the location of the previous definition
 #define __GMP_LIBGMP_DLL 1
 
In file included from C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/tb_ap_uint_16bit.cpp:2:0:
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_half_add-sub.hpp:11:28: error: variable or field 'apatb_half_add_sub_sw' declared void
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_half_add-sub.hpp:11:28: error: 'ap_uint' was not declared in this scope
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_half_add-sub.hpp:11:39: error: expected primary-expression before ',' token
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_half_add-sub.hpp:11:41: error: 'ap_uint' was not declared in this scope
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_half_add-sub.hpp:11:52: error: expected primary-expression before ',' token
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_half_add-sub.hpp:11:54: error: 'ap_uint' was not declared in this scope
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_half_add-sub.hpp:11:67: error: expected primary-expression before ',' token
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_half_add-sub.hpp:11:69: error: 'ap_uint' was not declared in this scope
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_half_add-sub.hpp:11:82: error: expected primary-expression before ',' token
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/alu_half_add-sub.hpp:11:84: error: expected primary-expression before 'int'
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/tb_ap_uint_16bit.cpp: In function 'int main()':
C:/Users/kwokt/HLS-Models/Simple-Designs/Combinational/Arithmetic/ALU/alu_half_adder/tb_ap_uint_16bit.cpp:18:33: error: 'apatb_half_add_sub_sw' was not declared in this scope
         half_add_sub(A, B, sum, carry, 0); // 0 represents addition
                                 ^
make: *** [obj/tb_ap_uint_16bit.cpp_pre.cpp.tb.o] Error 1
